// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
<config__Base>
  <div>
    <responsive__SliceContainer>
      <div>
        <responsive__Base>
          <div>
            <responsive__ChildContainer>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;

exports[`3. two child elements 1`] = `
<config__Base>
  <div>
    <responsive__SliceContainer>
      <div>
        <responsive__Base>
          <div>
            <responsive__ChildContainer>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div />
            </responsive>
            <responsive__ChildContainer>
              <div>
                <div>
                  standard-2
                </div>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;

exports[`4. three child elements 1`] = `
<config__Base>
  <div>
    <responsive__SliceContainer>
      <div>
        <responsive__Base>
          <div>
            <responsive__ChildContainer>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div />
            </responsive>
            <responsive__ChildContainer>
              <div>
                <div>
                  standard-2
                </div>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div />
            </responsive>
            <responsive__ChildContainer>
              <div>
                <div>
                  standard-3
                </div>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;
